static/environment.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    color: rgb(190, 190, 190);
}

body, html {
    width: 100%;
    height: 100%;
    display: flex;
    background-color: rgb(18, 18, 18);
}

main {
    display: flex;
    flex-direction: column;
    flex-grow: 8;
}

canvas {
    width: 100%;
    height: 100%;
    flex-grow: 1;
}

aside {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    flex-basis: 0;
    flex-grow: 1;
    background-color: rgba(255, 255, 255, 0.05);
}

section {
    display: flex;
    flex-wrap: wrap;
}

label {
    flex-grow: 1;
}

input {
    background-color: rgba(255, 255, 255, 0.05);
    border: none;
    outline: none;
}

button {
    background-color: rgba(255, 255, 255, 0.05);
    border: none;
    cursor: pointer;
    flex-grow: 1;
}

button:hover {
    background-color: rgba(255, 255, 255, 0.09);
}

